# python-pitfalls

./: .gitignore  README.md  pitfalls.md  pyproject.toml  pyrightconfig.json  ruff.toml
.devcontainer/: Dockerfile  devcontainer.json
dev/: init_dev.sh  prepare_project.sh
src/: equals.py  int_interning_measure.py  is_vs_equal.py  log.txt  pitfall1_is.py  pitfall2_mutable_default.py  pitfall3_list_multiplication.py  pitfall4_truthiness.py  pitfall5_copy.py  pitfall6_shadowing.py  pitfall7_mutate_while_iterating.py  str_interning.py
