[project]
name = "python-pitfalls"
version = "1.0.0"
description = "Python pitfalls"
authors = [
    {name = "Štefan Ivanetič",email = "sivanetic@nil.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "rich (>=14.2.0,<15.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ruff = "^0.12.7"
